test/functions/deitz/test_var_type_is_value_error.chpl
var y: int;

proc f() {
  var x: y;
  writeln(x);
}

f();
